--- a/package.json
+++ b/package.json
@@ -80,9 +80,10 @@
     "testEnvironment": "node"
   },
   "lint-staged": {
-    "*.{ts,tsx}": [
+    "*/**.{ts,tsx}": [
       "eslint --fix",
-      "prettier --write"
+      "prettier --write",
+      "npm format"
     ]
   },
   "husky": {
