--- a/package.json
+++ b/package.json
@@ -82,8 +82,7 @@
   "lint-staged": {
     "*.{ts,tsx}": [
       "eslint --fix",
-      "prettier --write",
-      "npm format"
+      "prettier --write"
     ]
   }
 }
